# scattering-perceptual-evaluation

./: LICENSE  README.md  pyproject.toml
capev_emulation/: CAPE-V_Breathiness.csv  CAPE-V_Loudness.csv  CAPE-V_Pitch.csv  CAPE-V_Roughness.csv  CAPE-V_Severity.csv  CAPE-V_Strain.csv  capev_mean_ratings.csv  capev_regression_scattering_standalone.ipynb  file_names.csv  finding_hp_capev.ipynb  results_hp.pkl  utils.py
voice_typing/: VoicesDataset.py  confusion_matrices.ipynb  finding_hp_voice_typing.ipynb  images_scatter_coefs.ipynb  labels_meei.csv  labels_saar.csv  names_and_labels_meei.csv  names_and_labels_saar.csv  results_hp.pkl  signal_typing_by_scattering_standalone.ipynb  utils.py  voice_types_examples.ipynb
voice_typing/.ipynb_checkpoints/: signal_typing_by_scattering_standalone-checkpoint.ipynb
voice_typing/figures/confusion_matrices/: results_general.csv  results_meei.csv  results_saar.csv
