[tool.poetry]
name = "scattering_perceptual_emulation"
version = "0.1.0"
description = ""
authors = ["J. M. Miramont"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
kymatio = "^0.2.1"
sklearn = "^0.0"
torch = "1.9.0"
pandas = "^1.4.0"
ipykernel = "^6.7.0"
seaborn = "^0.11.2"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
